Show Buttons on Cancelled Order
Modified order template to show "View order as user" and "View email
history" on orders with cancelled status.

--- a/src/pretix/control/templates/pretixcontrol/order/index.html
+++ b/src/pretix/control/templates/pretixcontrol/order/index.html
@@ -18,7 +18,7 @@
         {% include "pretixcontrol/orders/fragment_order_status.html" with order=order class="pull-right" %}
     </h1>
     {% if 'can_change_orders' in request.eventpermset %}
-        {% if order.status == 'n' or order.status == 'p' or order.status == 'e' %}
+        {% if order.status == 'n' or order.status == 'p' or order.status == 'e' or order.status == 'c' %}
             <form action="{% url "control:event.order.transition" event=request.event.slug organizer=request.event.organizer.slug code=order.code %}"
                     method="post">
                 {% csrf_token %}
