Make it optional to notify user on order change

--- a/src/pretix/control/templates/pretixcontrol/order/change.html
+++ b/src/pretix/control/templates/pretixcontrol/order/change.html
@@ -175,6 +175,7 @@
                         </div>
                     {% endif %}
                     {% bootstrap_field other_form.recalculate_taxes layout="control" %}
+                    {% bootstrap_field other_form.notify layout="control" %}
                 </div>
             </div>
         </div>
