correct english typos
As with PR #660, it should be checked whether the changes to the
.po-files are respected in the corresponding src-files.

--- a/src/pretix/plugins/ticketoutputpdf/templates/pretixplugins/ticketoutputpdf/index.html
+++ b/src/pretix/plugins/ticketoutputpdf/templates/pretixplugins/ticketoutputpdf/index.html
@@ -106,7 +106,7 @@
                                 </p>
                                 <p>
                                     {% blocktrans trimmed %}
-                                        The editor is tested with recent versions of Google Chome, Mozilla Firefox
+                                        The editor is tested with recent versions of Google Chrome, Mozilla Firefox
                                         and Opera. Other browsers, especially Internet Explorer or Microsoft Edge, might
                                         have problems displaying your background PDF or loading the correct fonts.
                                     {% endblocktrans %}
