--- a/src/pretix/control/templates/pretixcontrol/waitinglist/index.html
+++ b/src/pretix/control/templates/pretixcontrol/waitinglist/index.html
@@ -37,7 +37,7 @@
                                     You can either send them one-by-one in an order of your choice by clicking the
                                     buttons next to a line in this table (if sufficient quota is available) or you can
                                     press the big button below this text to send out as many vouchers as currently
-                                    possible to the persons who waitet longest.
+                                    possible to the persons who waited longest.
                                 {% endblocktrans %}
                             </p>
                         {% endif %}
