Allow attaching invoices to emails

--- a/src/pretix/control/templates/pretixcontrol/event/invoicing.html
+++ b/src/pretix/control/templates/pretixcontrol/event/invoicing.html
@@ -11,6 +11,7 @@
             {% bootstrap_field form.invoice_address_required layout="control" %}
             {% bootstrap_field form.invoice_name_required layout="control" %}
             {% bootstrap_field form.invoice_generate layout="control" %}
+            {% bootstrap_field form.invoice_email_attachment layout="control" %}
             {% bootstrap_field form.invoice_address_vatid layout="control" %}
             {% bootstrap_field form.invoice_numbers_consecutive layout="control" %}
             {% bootstrap_field form.invoice_numbers_prefix layout="control" %}
