Implement progress indicator during checkout

--- a/src/pretix/static/pretixpresale/scss/main.scss
+++ b/src/pretix/static/pretixpresale/scss/main.scss
@@ -7,6 +7,7 @@
 @import "_cart.scss";
 @import "_forms.scss";
 @import "_calendar.scss";
+@import "_checkout.scss";
 @import "../../pretixbase/scss/webfont.scss";
 
 footer {
