--- a/src/pretix/presale/templates/pretixpresale/event/checkout_base.html
+++ b/src/pretix/presale/templates/pretixpresale/event/checkout_base.html
@@ -40,6 +40,7 @@
         </div>
     </div>
     <h2>{% trans "Checkout" %}</h2>
+    {% include "pretixpresale/event/fragment_checkoutflow.html" %}
     {% block inner %}
     {% endblock %}
 {% endblock %}
