Use rel="noopener" with target="_blank".
Required reading: https://mathiasbynens.github.io/rel-noopener/

--- a/src/pretix/control/templates/pretixcontrol/event/widget.html
+++ b/src/pretix/control/templates/pretixcontrol/event/widget.html
@@ -35,7 +35,7 @@
 &lt;noscript&gt;
    &lt;div class="pretix-widget"&gt;
         &lt;div class="pretix-widget-info-message"&gt;
-            {% blocktrans trimmed with a_attr='target="_blank" href="'|add:indexurl|add:'"'|safe %}
+            {% blocktrans trimmed with a_attr='target="_blank" rel="noopener" href="'|add:indexurl|add:'"'|safe %}
                 JavaScript is disabled in your browser. To access our ticket shop without JavaScript,
                 please &lt;a {{ a_attr }}&gt;click here&lt;/a&gt;.
             {% endblocktrans %}
@@ -44,7 +44,7 @@
 &lt;/noscript&gt;
 </pre>
         <p>
-            <a href="https://docs.pretix.eu/en/latest/user/events/widget.html" target="_blank">
+            <a href="https://docs.pretix.eu/en/latest/user/events/widget.html" target="_blank" rel="noopener">
                 <span class="fa fa-question-circle"></span>
                 {% trans "Read our documentation for more information" %}
             </a>
