--- a/src/pretix/presale/templates/pretixpresale/event/fragment_checkoutflow.html
+++ b/src/pretix/presale/templates/pretixpresale/event/fragment_checkoutflow.html
@@ -19,7 +19,7 @@
             <span class="fa fa-ticket"></span>
         </div>
         <div class="checkout-step-label">
-            {% trans "Done" context "checkoutflow" %}
+            {% trans "Order confirmed" context "checkoutflow" %}
         </div>
     </a>
 </div>
