--- a/src/pretix/presale/templates/pretixpresale/event/checkout_confirm.html
+++ b/src/pretix/presale/templates/pretixpresale/event/checkout_confirm.html
@@ -3,9 +3,9 @@
 {% load bootstrap3 %}
 {% load eventurl %}
 {% load eventsignal %}
-{% block title %}{% trans "Confirm order" %}{% endblock %}
+{% block title %}{% trans "Review order" %}{% endblock %}
 {% block content %}
-    <h2>{% trans "Confirm order" %}</h2>
+    <h2>{% trans "Review order" %}</h2>
     {% include "pretixpresale/event/fragment_checkoutflow.html" %}
     <p>{% trans "Please review the details below and confirm your order." %}</p>
     <form method="post" data-asynctask>
