--- a/src/pretix/control/templates/pretixcontrol/event/invoicing.html
+++ b/src/pretix/control/templates/pretixcontrol/event/invoicing.html
@@ -18,6 +18,7 @@
             {% bootstrap_field form.invoice_renderer layout="control" %}
             {% bootstrap_field form.invoice_language layout="control" %}
             {% bootstrap_field form.invoice_include_free layout="control" %}
+            {% bootstrap_field form.invoice_attendee_name layout="control" %}
             {% bootstrap_field form.invoice_address_from layout="control" %}
             {% bootstrap_field form.invoice_introductory_text layout="control" %}
             {% bootstrap_field form.invoice_additional_text layout="control" %}
