Stripe Elements: Fix incorrect JavaScript and display loading indicator

--- a/src/pretix/plugins/stripe/templates/pretixplugins/stripe/checkout_payment_form.html
+++ b/src/pretix/plugins/stripe/templates/pretixplugins/stripe/checkout_payment_form.html
@@ -31,6 +31,7 @@
     {% endif %}
 
     <div id="stripe-card" class="form-control">
+        <span class="fa fa-spinner fa-spin"></span>
         <!-- a Stripe Element will be inserted here. -->
     </div>
     <p class="help-block">
