--- a/src/pretix/control/templates/pretixcontrol/checkin/list_edit.html
+++ b/src/pretix/control/templates/pretixcontrol/checkin/list_edit.html
@@ -2,14 +2,14 @@
 {% load i18n %}
 {% load bootstrap3 %}
 {% block title %}
-    {% if question %}
+    {% if checkinlist %}
         {% blocktrans with name=checkinlist.name %}Check-in list: {{ name }}{% endblocktrans %}
     {% else %}
         {% trans "Check-in list" %}
     {% endif %}
 {% endblock %}
 {% block inside %}
-    {% if question %}
+    {% if checkinlist %}
         <h1>{% blocktrans with name=checkinlist.name %}Check-in list: {{ name }}{% endblocktrans %}</h1>
     {% else %}
         <h1>{% trans "Check-in list" %}</h1>
