--- a/src/pretix/control/templates/pretixcontrol/checkin/list_edit.html
+++ b/src/pretix/control/templates/pretixcontrol/checkin/list_edit.html
@@ -26,7 +26,7 @@
             <legend>{% trans "Products" %}</legend>
             <p>
                 {% blocktrans trimmed %}
-                    Please select the products or product variations that should be part of this check-in list.
+                    Please select the products that should be part of this check-in list.
                 {% endblocktrans %}
             </p>
             {% bootstrap_field form.all_products layout="control" %}
